# GraphRAG-experiments

./: .env.example  .gitignore  README.md  end-to-end-lupus.ipynb  neo4j-graphrag-first-rego.py  pyproject.toml
scripts/GraphRAG/: neo4j-graphrag-first-rego.py  neo4j-graphrag-quickstart.py
