[project]
name = "graphrag-experiments"
version = "0.1.0"
description = "Neo4j GraphRAG experiments and BRD-to-Rego extractor"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Thomas Tiotto" }]
dependencies = [
    "neo4j-graphrag[openai]>=0.3.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
notebook = [
    "jupyter",
    "numpy",
    "openai",
    "torch",
    "langchain-text-splitters",
    "tiktoken",
    "fsspec",
]
